--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal blog made by Mihailo Zecar - Vue.js, AWS, AWS Amplify, and other tech">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="description" content="Personal website made by Mihailo Zecar - Vue.js, AWS, AWS Amplify, and other tech">
+    <link rel="icon" href="favicon.ico">
     <title><%= VUE_APP_NAME %></title>
   </head>
   <body>
@@ -13,6 +13,5 @@
       <strong>We're sorry but mihailozecar.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
