--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal website made by Mihailo Zecar - Vue.js, AWS, AWS Amplify, and other tech">
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="icons/fa/css/all.min.css">
     <title><%= VUE_APP_NAME %></title>
   </head>
   <body>
