--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal website made by Mihailo Zecar - Vue.js, AWS, AWS Amplify, and other tech">
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="icons/fa/css/all.min.css">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/icons/fa/css/all.min.css">
     <title><%= VUE_APP_NAME %></title>
   </head>
   <body>
